# austhex

CVSROOT/: .indent.pro  checkoutlist  cvswrappers
mod_austhex/: .cvsignore  Makefile.am  Makefile.bs  README.CVS  configure.ac
mod_austhex/autogen/: language.def
mod_austhex/doc/: example.conf
mod_austhex/install/: .cvsignore  austnet-irc2.scm  language.tpl
mod_austhex/misc/: austrace
mod_austhex/src/: module.cpp
mod_austhex/src/vworld/: vworld.cpp
mod_palladium/src/: ctcp.cpp  module.cpp  service.cpp  service.h
